# penyu

./: Cargo.toml  README.md
src/: error.rs  lib.rs  model.rs  syntax.rs  utils.rs  vocabs.rs  write.rs  writer.rs
src/model/: graph.rs  iri.rs  literal.rs  node.rs  triple.rs
src/read/: xml.rs
src/utils/: twine.rs
src/vocabs/: efo.rs  hgnc.rs  obo.rs  obo_in_owl.rs  rdf.rs  rdfs.rs  umls.rs  uniprot.rs  xml.rs  xsd.rs
src/write/: turtle.rs
