[package]
name = "penyu"
description = "Writing RDF as Turtle"
version = "0.0.1"
edition = "2021"
authors = ["Oliver Ruebenacker <oliverr@broadinstitute.org>"]
readme = "README.md"
repository = "https://github.com/broadinstitute/penyu"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strey = { git = "https://github.com/broadinstitute/strey.git", rev = "e58bdcccb4d379a9ded96b6e936558a23784db85" }
