[package]
name = "penyu"
description = "Writing RDF as Turtle"
version = "0.0.1"
edition = "2021"
authors = ["Oliver Ruebenacker <oliverr@broadinstitute.org>"]
readme = "README.md"
repository = "https://github.com/broadinstitute/penyu"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strey = { git = "https://github.com/broadinstitute/strey.git", rev = "9e9734d2cc08c5aad64ec4b96ae92cde178e79a4" }
