[package]
name = "penyu"
description = "Writing RDF as Turtle"
version = "0.0.1"
edition = "2021"
authors = ["Oliver Ruebenacker <oliverr@broadinstitute.org>"]
readme = "README.md"
repository = "https://github.com/broadinstitute/penyu"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strey = { git = "https://github.com/broadinstitute/strey.git", rev = "b761d03579293f66021c14c459758fb1c02b9383" }
xml-rs = "0.8.23"
